--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A fun multiplayer game",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "Sam Clearman",
   "license": "ISC",
@@ -14,7 +15,9 @@
     "seedrandom": "^3.0.5",
     "ts-loader": "^6.2.1",
     "typescript": "^3.6.4",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.2"
+  },
+  "devDependencies": {
     "webpack-cli": "^3.3.10"
   }
 }
