--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack -w"
+    "start": "concurrently --kill-others 'webpack -w' 'serve -l 8000 dist'"
   },
   "author": "Sam Clearman",
   "license": "ISC",
