--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack": "^4.41.2"
   },
   "devDependencies": {
+    "concurrently": "^5.0.2",
     "serve": "^11.3.0",
     "webpack-cli": "^3.3.10"
   }
