--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "2etris",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A fun multiplayer game",
   "private": true,
   "scripts": {
@@ -11,16 +11,16 @@
   "author": "Sam Clearman",
   "license": "ISC",
   "dependencies": {
-    "@types/seedrandom": "^2.4.28",
-    "firebase": "^7.5.2",
-    "seedrandom": "^3.0.5",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.6.4",
-    "webpack": "^4.41.2"
+    "@types/seedrandom": "*",
+    "firebase": "10.x",
+    "seedrandom": "*",
+    "ts-loader": "*",
+    "typescript": "5.x",
+    "webpack": "5.x"
   },
   "devDependencies": {
-    "concurrently": "^5.0.2",
-    "serve": "^11.3.0",
-    "webpack-cli": "^3.3.10"
+    "concurrently": "*",
+    "serve": "*",
+    "webpack-cli": "*"
   }
 }
